crates/toolpath-cli/tests/snapshots/render_md_snapshots__render_md_path_03_signed_pr.snap
---
source: crates/toolpath-cli/tests/render_md_snapshots.rs
expression: "render_md(\"path-03-signed-pr.json\")"
---
# Add email validation

**Base:** `github:myorg/myrepo` @ `main`
**Head:** `step-003`
**Source:** `github:myorg/myrepo/pull/42`
- **fixes:** `issue://github/myorg/myrepo/issues/42`
**Changes:** +1 −2 across 1 files
**Steps:** 3 | **Artifacts:** 1 | **Dead ends:** 0

## Timeline

### step-001 — agent:claude-code

**Timestamp:** 2026-01-29T10:00:00Z

> Add email validation with custom error type

- `src/auth/validator.rs` (+1 -0)

### step-002 — tool:rustfmt

**Timestamp:** 2026-01-29T10:00:30Z
**Parents:** `step-001`

> Auto-format

- `src/auth/validator.rs` (+0 -1)

### step-003 — human:alex [head]

**Timestamp:** 2026-01-29T10:15:00Z
**Parents:** `step-002`

> Improve error messages for better UX

- `src/auth/validator.rs` (+0 -1)

## Actors

- **`agent:claude-code`** — Claude Code (anthropic, claude-sonnet-4-20250514)
- **`human:alex`** — Alex Kesling
- **`human:bob`** — Bob Reviewer
- **`tool:rustfmt`** — rustfmt
