crates/toolpath-cli/tests/snapshots/render_md_snapshots__render_md_step_06_signed.snap
---
source: crates/toolpath-cli/tests/render_md_snapshots.rs
expression: "render_md(\"step-06-signed.json\")"
---
# step-001

**Actor:** `human:alex`
**Timestamp:** 2026-01-29T10:00:00Z

> Fix greeting punctuation

## Changes

- `src/main.rs` (+1 -1)
