crates/toolpath-cli/tests/snapshots/render_md_snapshots__render_md_step_07_merge.snap
---
source: crates/toolpath-cli/tests/render_md_snapshots.rs
expression: "render_md(\"step-07-merge.json\")"
---
# step-004

**Actor:** `human:alex`
**Timestamp:** 2026-01-29T12:00:00Z
**Parents:** `step-002a`, `step-003b`

> Merge validation improvements from feature-A with logging from feature-B

## Changes

- `src/auth/validator.rs`
